--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
+# Dependencies
 node_modules/
+package-lock.json
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# IDE files
+.vscode/
+.idea/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Build output
+dist/
+build/
+
+# Operating System
+.DS_Store
+Thumbs.db
